# IsThisShit

./: .gitignore  AGENTS.md  CLI_USAGE.md  NapCat_AGENTs.md  README.md  TODOs.code-review-risk-register.md  TODOs.md  app.py  close_existing_cli.ps1  loadNapCat.js  pyproject.toml  requirements.txt  restart_napcat_service.ps1  run_targeted_missing_retest.bat  simulate_asset_states.py  start_cli.bat  start_cli_compat.bat  start_cli_modern_host.bat  start_napcat_logged.bat  targeted_missing_retest.py
dev/: INDEX.md
scripts/: benchmark_media_resolution.py  build_share_bundle.py  preview_rag.py  run_analysis.py  run_llm_analysis.py  run_llm_window_analysis.py  run_preprocess.py  run_rag_query.py
tests/: test_analysis_docs.py  test_analysis_service.py  test_asset_simulator.py  test_benshi_llm_agent.py  test_benshi_master_agent.py  test_bootstrapper.py  test_chunk_policies.py  test_cli_app_login.py  test_cli_completion.py  test_cli_entry.py  test_cli_keybindings.py  test_cli_login_completion.py  test_cli_status_display.py  test_connect_errors.py  test_debug_render.py  test_diagnostics.py  test_embedding_env.py  test_embedding_policy.py  test_export_commands.py  test_export_input.py  test_export_perf.py  test_export_selection.py  test_export_selection_summary.py  test_llm_analysis.py  test_llm_window_analysis.py  test_local_qq.py  test_media_bundle.py  test_media_bundle_recent_identity_reuse.py  test_media_downloader.py  test_media_downloader_progress_and_forward_timeout.py  test_metadata_directory.py  test_napcat_bootstrap.py  test_napcat_diagnostics.py  test_napcat_fast_history.py  (+30 more)
(+219 files in other folders)
