[project]
name = "qq-data-exporter"
version = "0.1.0"
description = "Decoupled QQ group/private chat exporter built on NapCatQQ"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "orjson>=3.10.15",
    "pypinyin>=0.55.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.1",
    "qrcode>=8.2",
    "rich>=13.9.4",
    "typer>=0.16.1",
    "websockets>=15.0.1",
    "qdrant-client>=1.17.0",
    "peft>=0.18.1",
    "pillow>=12.1.1",
    "numpy>=2.4.2",
    "transformers>=4.52.0,<5.0.0",
    "huggingface-hub<1.0",
    "bitsandbytes>=0.49.2",
    "qwen-vl-utils>=0.0.14",
]

[project.optional-dependencies]
analysis = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.3",
    "transformers>=4.52.0,<5.0.0",
]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
qq-data-cli = "qq_data_cli.app:main"

[tool.uv]
cache-dir = ".uv-cache"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["src"]
